--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# Dependencies
 node_modules
-.env
+
+# Next.js
 .next
+out
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Netlify
+.netlify
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Misc
+.DS_Store
+*.pem
